--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
-body{
+body {
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    justify-content: center;
     align-items: center;
     background-color: rgb(138, 136, 136);
 }
 
+.container {
+    background-color: rgb(22, 31, 34);
+    color: white;
+    width: 80vw;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    padding: 1rem;
+    border-radius: 0.8rem;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.button-style {
+    background-color: rgba(0, 0, 0, 0.664);
+    border-radius: 0.5rem;
+    color: white;
+    padding: 1rem;
+}
+
+.button-style:hover {
+    background-color: rgba(48, 48, 45, 0.514);
+    cursor: pointer;
+}
