--- a/style.css
+++ b/style.css
@@ -9,34 +9,34 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(./images/vault.jpg);
-    background-repeat: no-repeat;
-    background-position: left;
-    background-color: black;
+    background-image: url(./images/background-cell.jpg);
+    background-size: 80%;
 }
 
 .container {
-    background-color: rgb(138, 136, 136);
-    color: white;
-    width: 62vw;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0) 63%, rgb(22, 31, 34) 100%);
+    color:rgb(212, 209, 209);
+    width: 82vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    gap: 1rem;
     padding: 1rem;
     border-radius: 0.4rem;
-    border-left: 0.5rem solid black;
-    border-right: 0.5rem solid black;
+    border-left: 0.3rem solid black;
+    border-right: 0.3rem solid black;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 
 
 .button-style {
     background-color: rgb(22, 31, 34);
+    border: rgb(22, 31, 34);
     border-radius: 0.5rem;
-    color: white;
+    color: rgb(212, 209, 209);
     padding: 1rem;
 }
 
@@ -49,14 +49,14 @@ body {
     text-align: center;
     background-color: rgb(22, 31, 34);
     border-radius: 0.5rem;
-    padding: 1rem;
+    padding-top: 1.3rem;
+    padding-bottom: 1.3rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
 
-.image{
-    background-image: url(./images/hooded-character.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 40%;
-    width: 15vw;
-    height: 20vh;
+.imageSecondScene{
+    content: url(./images/hooded-character.jpg);
+    border-radius: 1rem;
+    flex: 0.5;
 }
