--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-image: url(./images/background-cell.jpg);
-    background-size: 80%;
+    background-size: 100%;
 }
 
 .container {
@@ -48,6 +48,7 @@ body {
 .text-style{
     text-align: center;
     background-color: rgb(22, 31, 34);
+    width: 50%;
     border-radius: 0.5rem;
     padding-top: 1.3rem;
     padding-bottom: 1.3rem;
