--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     padding: 1rem;
     border-radius: 0.4rem;
     border-left: 0.3rem solid black;
@@ -32,7 +31,7 @@ body {
 
 
 
-.button-style {
+.button1-style {
     background-color: rgb(22, 31, 34);
     border: rgb(22, 31, 34);
     border-radius: 0.5rem;
@@ -40,7 +39,7 @@ body {
     padding: 1rem;
 }
 
-.button-style:hover {
+.button1-style:hover {
     background-color: rgba(48, 48, 45, 0.514);
     cursor: pointer;
 }
@@ -59,5 +58,9 @@ body {
 .imageSecondScene{
     content: url(./images/hooded-character.jpg);
     border-radius: 1rem;
-    flex: 0.5;
+    flex: 0.6;
+}
+
+.speaker-name {
+    font-size: 1.4rem;
 }
