--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 }
 
 .container {
-    background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0) 63%, rgb(22, 31, 34) 100%);
     color:rgb(212, 209, 209);
     width: 82vw;
@@ -41,6 +40,21 @@ body {
     border-right: 0.3rem solid rgba(224, 219, 219, 0.562);
     align-items: center;
     justify-content: space-between;
+}
+
+.PassedOutContainer {
+    background: linear-gradient(180deg, rgba(0,0,0) 63%, rgb(22, 31, 34) 100%);
+    color:rgb(212, 209, 209);
+    width: 82vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.4rem;
+    border-left: 0.3rem solid black;
+    border-right: 0.3rem solid black;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .button-style {
@@ -101,6 +115,18 @@ body {
     content: url(./images/arrested.png);
     border-radius: 1rem;
     flex: 0.4;
+}
+
+.imgDungeon {
+    content: url(./images/dungeon.jpg);
+    border-radius: 1rem;
+    width: 60%;
+}
+
+.imgKnockedOut {
+    content: url(./images/knocked-out.png);
+    border-radius: 1rem;
+    width: 60%;
 }
 
 .speaker-name {
